# -omputer-lub

./: CMakeLists.txt  ComputerClubInfo.cpp  ComputerClubInfo.h  README.md  main.cpp  testError.txt
lib/: CMakeLists.txt  ComputerClubInfo.cpp  ComputerClubInfo.h
tests/: CMakeLists.txt  Tests.cpp
